# loom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_INDEX.md  BUILD.bazel  CHANGELOG.md  CLAUDE.md  COALESCE_LOCALS_RESULTS.md  CONTRIBUTING.md  Cargo.toml  DIFFERENTIAL_TESTING_FINDINGS.md  ENCODER_BUG_ANALYSIS.md  LICENSE  LOOM_OPTIMIZATION_ANALYSIS.md  LOOM_SYNTH_ARCHITECTURE.md  MODULE.bazel  NEXT_STEPS.md  OPTIMIZATION_DETAILED_TABLE.txt  OPTIMIZATION_QUICK_REFERENCE.txt  PROGRESS_PARALLEL_IMPLEMENTATION.md  README.md  SESSION_SUMMARY_PARALLEL_TRACKS.md  WORKSPACE  analyze_wasm.sh  claude.md  demo_verify.rs  flake.nix  rivet.yaml  z3_demo.md
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  compliance.yml  fuzz.yml  release.yml  validate-shared.yml  verification-gate.yml
.rivet/: agent-context.md
docs/: ARCHITECTURE.md  BUG_QUICKSORT_INVALID_WASM.md  CONTROL_FLOW_DESIGN.md  CSE_DESIGN.md  DCE_DESIGN.md  FUNCTION_INLINING_DESIGN.md  FUSED_COMPONENT_OPTIMIZATION.md  FUZZING.md  IMPLEMENTATION_ACHIEVEMENTS.md  IMPLEMENTATION_PLAN.md  OPTIMIZATION_ACHIEVEMENTS.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_COMPARISON.md  PRECOMPUTE_DESIGN.md  PROGRESS_SUMMARY.md  QUICK_REFERENCE.md  SESSION_3_SUMMARY.md  SESSION_4_FINAL_SUMMARY.md  SESSION_SUMMARY.md  TESTING_FRAMEWORK.md  USAGE_GUIDE.md  architecture.md  requirements.txt
docs/analysis/: ANALYSIS_INDEX.md  EXHAUSTIVE_VERIFICATION_RESEARCH.md  ISLE_DEEP_DIVE.md  ISLE_INVESTIGATION.md  LOOM_OPTIMIZATION_ANALYSIS.md  RELEVANT_PAPERS_2021_2025.md  Z3_VERIFICATION_STATUS.md  index.md  loom-vs-binaryen.md  verification-tools.md  z3-status.md
docs/architecture/: FORMAL_VERIFICATION_ARCHITECTURE.md  formal-verification.md
docs/design/: block-merging.md  branch-simplification.md  fused-component-optimization.md  pr-c-precise-cf-verification.md  simplify-locals.md  vacuum.md
docs/guides/: formal-verification.md  quick-reference.md  usage.md  wasm-build.md
docs/measurements/: v0.9.0-corpus-baseline.md  v1.1.0-corpus-baseline.md
docs/proposals/: EMI_TESTING_PROPOSAL.md
docs/research/: mutation-perf-inference-eval.md  novel-optimization-ideas.md
docs/research/gale-v0.4.0/: measurement-report.md
docs/research/gale-v0.5.0/: source-pattern-analysis.md  wasm-opt-gap-analysis.md
docs/research/v0.7.0/: algorithmic-solver-feasibility.md  gale-deep-scan.md  issue-triage-68-75.md  optimization-methods-survey.md
docs/research/v1.0.3/: issue-roadmap.md
docs/research/v1.0.5/: rocq-roundtrip-prep.md
docs/source/: conf.py  index.rst
docs/source/architecture/: index.rst
docs/source/development/: index.rst
docs/source/requirements/: build_systems.rst  component_model.rst  core.rst  create_opt_stubs.sh  fill_opts.py  index.rst  optimizations_constants.rst  optimizations_dataflow.rst  optimizations_dce.rst  optimizations_debug.rst  optimizations_eh.rst  optimizations_gc.rst  optimizations_js.rst  (+16 more)
fuzz/: .gitignore  Cargo.toml
fuzz/dictionaries/: wasm.dict
fuzz/fuzz_targets/: fuzz_differential.rs  fuzz_optimize.rs  fuzz_roundtrip.rs
loom-cli/: BUILD.bazel  Cargo.toml
loom-cli/src/: main.rs
loom-core/: BUILD.bazel  Cargo.toml  KNOWN_ISSUES.md
loom-core/benches/: optimization_benchmarks.rs
loom-core/examples/: verify_rules_demo.rs
loom-core/src/: component_executor.rs  component_optimizer.rs  egraph.rs  fused_optimizer.rs  islands.rs  lib.rs  peephole_synth.rs  scry_invariants.rs  stack.rs  stats.rs  summary.rs  verify.rs  verify_e2e.rs  verify_rules.rs
loom-core/tests/: component_execution_tests.rs  component_tests.rs  fuzz_tests.rs  optimization_tests.rs  spec_features.rs  verification.proptest-regressions  verification.rs
loom-core/tests/component_fixtures/: calc.component.wasm  simple.component.wasm
loom-core/tests/fixtures/: seam_sroa_decide.wat
loom-core/tests/fixtures/repro-219/: README.md  sem.loom.wasm
loom-isle/: BUILD.bazel  Cargo.toml
loom-isle/isle/: wasm_terms.isle
loom-isle/src/: lib.rs
loom-shared/: Cargo.toml  build.rs
loom-shared/isle/: constructors.isle  types.isle  wasm_terms.isle
loom-shared/isle/rules/: constant_folding.isle  constant_folding_v2.isle  default.isle  seam_sroa.isle
loom-shared/src/: lib.rs
loom-testing/: Cargo.toml
loom-testing/benches/: corpus_baseline.rs
loom-testing/scripts/: collect_corpus.sh
loom-testing/src/: differential.rs  lib.rs
loom-testing/src/emi/: analysis.rs  mod.rs  mutation.rs  types.rs
loom-testing/tests/: comprehensive_verification.rs  emi_integration.rs  stress_test.rs
proofs/: BUILD.bazel  Correctness.v
proofs/codec/: Roundtrip.v
proofs/isle/: TermBijection.v
proofs/rust_verified/: BUILD.bazel  isle_conversion.rs  isle_conversion_proofs.v  stack_signature.rs  stack_signature_proofs.v  value_types.rs  value_types_proofs.v  value_types_translated_proofs.v
proofs/semantics/: TermSemantics.v  WasmSemantics.v
proofs/simplify/: Bitwise.v  ConstantFolding.v  FusedOptimization.v  Identity.v  StrengthReduction.v
proofs/stack/: StackSignature.v
safety/requirements/: design-decisions.yaml  features.yaml  requirements.yaml  safety-case.yaml  verification.yaml
safety/stpa/: control-structure.yaml  controller-constraints.yaml  hazards.yaml  loss-scenarios.yaml  losses.yaml  system-constraints.yaml  ucas.yaml
scripts/: benchmark_vs_wasm_opt.sh  check_wasm_opt_version.sh  collect_corpus.sh  measure_corpus.sh  test_idempotence.py  wasm-opt.pinned
tests/: test_fixtures.rs
tests/corpus/: MELD_FUSED_README.md  httparse.wasm  json_lite.wasm  state_machine.wasm
tests/fixtures/: advanced_math.wat  bench_bitops.wat  bench_compare.wat  bench_crypto.wat  bench_locals.wat  bench_math.wat  bench_memory.wat  bench_unary.wat  block_merging_test.wat  branch_simplification_test.wat  crypto_utils.wat  dce_test.wat  fibonacci.wat  matrix_multiply.wat  quicksort.wat  simple_game_logic.wat  simple_module.wat  simplify_locals_test.wat  test_expected.wat  test_input.wat  test_phase7.wat  test_phase8_bitwise.wat  test_phase8_comparisons.wat  test_phase8_division.wat  vacuum_test.wat
(+19 files in other folders)
