[workspace]
resolver = "2"
members = [
    "loom-core",
    "loom-cli",
    "loom-isle", "loom-testing",
]

[workspace.package]
version = "0.1.0"
authors = ["PulseEngine <https://github.com/pulseengine>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/pulseengine/loom"
rust-version = "1.75"

[workspace.dependencies]
# WebAssembly parsing and encoding
wasmparser = { version = "0.241", features = ["component-model"] }
wasm-encoder = { version = "0.241", features = ["component-model"] }
wasmprinter = "0.241"
wat = "1.241"
wit-component = "0.241"

# ISLE compiler and runtime
cranelift-isle = "0.113"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Testing
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# WASM profile for wasm32-wasip2 builds (Issue #8)
[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

