[workspace]
resolver = "2"
members = [
    "loom-shared",
    "loom-core",
    "loom-cli",
    "loom-isle",
    "loom-testing",
]

[workspace.package]
version = "1.1.17"
authors = ["PulseEngine <https://github.com/pulseengine>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pulseengine/loom"
rust-version = "1.85"

[workspace.dependencies]
# WebAssembly parsing and encoding
wasmparser = { version = "0.252", features = ["component-model"] }
wasm-encoder = { version = "0.252", features = ["component-model"] }
wasmprinter = "0.252"
wat = "1.241"
wit-component = "0.252"

# ISLE compiler and runtime.
# Pinned to 0.132: cranelift-isle 0.133.x raised its MSRV to rustc 1.94.0, which
# is not yet stable (stable is 1.93.1), breaking the wasm32-wasip2 build and
# main CI (#236 bump). 0.132.x is the known-good line v1.1.13–v1.1.16 shipped on.
# Revisit once rustc 1.94 is stable (or when the lockfile is committed, #142).
cranelift-isle = "0.132"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Testing
proptest = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# WASM profile for wasm32-wasip2 builds (Issue #8)
[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Use forked z3 for WASI support (pulseengine/z3.rs with wasi-sdk patches)
# This enables Z3 verification in WASM builds
[patch.crates-io]
z3 = { git = "https://github.com/pulseengine/z3.rs.git", branch = "wasi-sdk-support" }
z3-sys = { git = "https://github.com/pulseengine/z3.rs.git", branch = "wasi-sdk-support" }
