###############################################################################
# LOOM Bazel Module Configuration
#
# Uses Bzlmod for modern dependency management.
# See: https://bazel.build/external/overview#bzlmod
###############################################################################

module(
    name = "loom",
    version = "0.3.0",
)

# Rocq/Coq formal verification support
# See: https://github.com/pulseengine/rules_rocq_rust
# Requires nix to be installed: sh <(curl -L https://nixos.org/nix/install)
bazel_dep(name = "rules_rocq_rust", version = "0.1.0")

# Override to fetch from GitHub (not yet in BCR)
# Pinned to e4660cc1b — pulseengine/rules_rocq_rust#34, which migrates
# rocq-of-rust to a hermetic rules_rust toolchain. This replaces the
# ad-hoc cargo build in coq_of_rust/private/repository.bzl that was
# failing on the CI runner with
# `rust-lld: error: unable to find library -lLLVM-19-rust-1.85.0-nightly`
# and kept the Rocq Formal Proofs check red on LOOM main since v1.0.5.
git_override(
    module_name = "rules_rocq_rust",
    remote = "https://github.com/pulseengine/rules_rocq_rust.git",
    commit = "e4660cc1b",
)

# Rocq toolchain extension (creates internal nixpkgs for bzlmod compatibility)
rocq = use_extension("@rules_rocq_rust//rocq:extensions.bzl", "rocq")
rocq.toolchain(
    version = "9.0",    # Rocq 9.0 for rocq-of-rust compatibility
    strategy = "nix",   # Hermetic nix-based installation
)
use_repo(
    rocq,
    "rocq_coqutil",
    "rocq_hammer",
    "rocq_hammer_tactics",
    "rocq_nixpkgs",
    "rocq_smpl",
    "rocq_stdlib",
    "rocq_toolchains",
)

register_toolchains("@rocq_toolchains//:all")

# rocq-of-rust toolchain for translating Rust to Rocq
rocq_of_rust = use_extension("@rules_rocq_rust//coq_of_rust:extensions.bzl", "rocq_of_rust")
rocq_of_rust.toolchain(
    commit = "858907dbee116c51d7c6e87511bf5f92d6432ba4",  # Pinned for reproducibility
    use_real_library = True,  # Full library with coqutil/hammer/smpl
)
use_repo(rocq_of_rust, "rocq_of_rust_toolchains", "rocq_of_rust_source")

register_toolchains("@rocq_of_rust_toolchains//:toolchain")
