###############################################################################
# LOOM Bazel Module Configuration
#
# Uses Bzlmod for modern dependency management.
# See: https://bazel.build/external/overview#bzlmod
###############################################################################

module(
    name = "loom",
    version = "0.3.0",
)

# Rocq/Coq formal verification support
# See: https://github.com/pulseengine/rules_rocq_rust
# Requires nix to be installed: sh <(curl -L https://nixos.org/nix/install)
bazel_dep(name = "rules_rocq_rust", version = "0.1.0")

# Override to fetch from GitHub (not yet in BCR).
# Pinned at/after rules_rocq_rust PR #25, which makes the rocq-of-rust
# toolchain download a hermetic Rust nightly sysroot and prepend
# <sysroot>/lib to LIBRARY_PATH so the rustc_private link step finds
# libLLVM-*-rust-*. The previous pin (307b65f, Feb 2) predated that fix,
# so the "Rocq Formal Proofs" CI job failed with:
#   rust-lld: error: unable to find library -lLLVM-19-rust-1.85.0-nightly
git_override(
    module_name = "rules_rocq_rust",
    remote = "https://github.com/pulseengine/rules_rocq_rust.git",
    commit = "424e6a6a5f87746ae178114661d6924bdaf805a3",
)

# Rocq toolchain extension (creates internal nixpkgs for bzlmod compatibility)
rocq = use_extension("@rules_rocq_rust//rocq:extensions.bzl", "rocq")
rocq.toolchain(
    version = "9.0",    # Rocq 9.0 for rocq-of-rust compatibility
    strategy = "nix",   # Hermetic nix-based installation
)
use_repo(
    rocq,
    "rocq_coqutil",
    "rocq_hammer",
    "rocq_hammer_tactics",
    "rocq_nixpkgs",
    "rocq_smpl",
    "rocq_stdlib",
    "rocq_toolchains",
)

register_toolchains("@rocq_toolchains//:all")

# rocq-of-rust toolchain for translating Rust to Rocq
rocq_of_rust = use_extension("@rules_rocq_rust//coq_of_rust:extensions.bzl", "rocq_of_rust")
rocq_of_rust.toolchain(
    commit = "858907dbee116c51d7c6e87511bf5f92d6432ba4",  # Pinned for reproducibility
    use_real_library = True,  # Full library with coqutil/hammer/smpl
)
use_repo(rocq_of_rust, "rocq_of_rust_toolchains", "rocq_of_rust_source")

register_toolchains("@rocq_of_rust_toolchains//:toolchain")
