[package]
name = "loom-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for LOOM WebAssembly optimizer"

[dependencies]
# Core library
loom-core = { path = "../loom-core" }
loom-isle = { path = "../loom-isle" }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Attestation support (optional)
wsc-attestation = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }

# Behavioral differential gate (#238, optional — pulls wasmtime; off by default)
loom-testing = { path = "../loom-testing", optional = true }

[features]
# Default features - verification and attestation enabled for production safety
default = ["verification", "attestation"]
# Enable Z3-based formal verification
verification = ["loom-core/verification"]
# Enable transformation attestation support
attestation = ["wsc-attestation", "serde_json"]
# Enable `loom optimize --differential` behavioral gate (#238). Off by default
# because it pulls wasmtime; build with `--features differential` to gate on
# observed execution equivalence (loom-testing's `runtime` is a default feature).
differential = ["loom-testing"]

[[bin]]
name = "loom"
path = "src/main.rs"
