[package]
name = "loom-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for LOOM WebAssembly optimizer"

[dependencies]
# WebAssembly
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wasmprinter = { workspace = true }
wat = { workspace = true }
wit-component = { workspace = true }

# Shared ISLE definitions (canonical source)
loom-shared = { path = "../loom-shared" }

# ISLE generated code (re-exports from loom-shared)
loom-isle = { path = "../loom-isle" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# LEB128 encoding
leb128 = "0.2"

[dev-dependencies]
proptest = { workspace = true }
criterion = "0.5"
wasmtime = "17.0"

[features]
# Default features - verification enabled for safety
default = ["verification"]
# Verification support with Z3 SMT solver
verification = ["z3"]

[dependencies.z3]
version = "0.19"
optional = true
features = ["bundled"]

[lib]
path = "src/lib.rs"

[[bench]]
name = "optimization_benchmarks"
harness = false
