[package]
name = "loom-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for LOOM WebAssembly optimizer"

[dependencies]
# WebAssembly
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wasmprinter = { workspace = true }
wat = { workspace = true }
wit-component = { workspace = true }

# Shared ISLE definitions (canonical source)
loom-shared = { path = "../loom-shared" }

# ISLE generated code (re-exports from loom-shared)
loom-isle = { path = "../loom-isle" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# LEB128 encoding
leb128 = "0.2"

# Parallel island-model optimization (v1.0.4 PR-islands, issue #71).
# Scoped to loom-core only — the dependency boundary stays tight; CLI does
# not depend on rayon, it just dispatches into the per-island entry point.
# Excluded on wasm32: rayon's thread pool needs pthread, which the
# single-threaded wasm32-wasip2 target can't link (#142 — the missing
# release binaries traced to this link failure). islands.rs falls back to a
# sequential run there; the deterministic tie-break makes it bit-identical.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
proptest = { workspace = true }
criterion = "0.5"
wasmtime = "17.0"

[features]
# Default features - verification enabled for safety
default = ["verification"]
# Verification support with Z3 SMT solver
verification = ["z3"]

[dependencies.z3]
version = "0.19"
optional = true
features = ["bundled"]

[lib]
path = "src/lib.rs"

[[bench]]
name = "optimization_benchmarks"
harness = false
