[package]
name = "loom-isle"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ISLE definitions and generated code for LOOM WebAssembly optimizer"

[dependencies]
# Re-export from loom-shared for backward compatibility
loom-shared = { path = "../loom-shared" }

[build-dependencies]
cranelift-isle = { workspace = true }

[lib]
path = "src/lib.rs"
