[package]
name = "loom-shared"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared WebAssembly optimization definitions for Loom and Synth"

[dependencies]
# WebAssembly parsing and encoding
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wasmprinter = { workspace = true }
wat = { workspace = true }
wit-component = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Z3 verification (optional, feature-gated for Synth/Loom Pro)
# Uses forked z3 with WASI support via [patch.crates-io] in workspace
z3 = { version = "0.19", optional = true }

[build-dependencies]
cranelift-isle = { workspace = true }

[features]
default = []
verification = ["z3"]

[lib]
name = "loom_shared"
path = "src/lib.rs"
