[package]
name = "loom-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0"
wasmparser = { workspace = true }
tempfile = "3.8"
glob = "0.3"
which = "8.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "differential"
path = "src/bin/differential.rs"
