[package]
name = "loom-testing"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["runtime"]
# Enable runtime execution (requires wasmtime, cannot build for wasm targets)
runtime = ["wasmtime", "tempfile", "which", "glob"]

[dependencies]
anyhow = "1.0"
wasmparser = { workspace = true }
wasm-encoder = { workspace = true }
wat = { workspace = true }
rand = "0.10"
loom-core = { path = "../loom-core" }

# Optional runtime dependencies (not available for wasm targets)
wasmtime = { version = "45.0", optional = true }
tempfile = { version = "3.8", optional = true }
which = { version = "8.0", optional = true }
glob = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.8"

[[bin]]
name = "differential"
path = "src/bin/differential.rs"
required-features = ["runtime"]

[[bin]]
name = "emi"
path = "src/bin/emi.rs"
required-features = ["runtime"]

# Criterion-driven corpus baseline (replaces scripts/measure_corpus.sh as the
# primary entry point; the shell script remains as a fallback).
#
# Run with:
#   cargo bench -p loom-testing --bench corpus_baseline
#
# Smoke test (criterion --test runs each bench once with no measurement):
#   cargo bench -p loom-testing --bench corpus_baseline -- --test
[[bench]]
name = "corpus_baseline"
harness = false
