load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# Stack signature proofs
rocq_library(
    name = "stack_proofs",
    srcs = glob(["stack/*.v"]),
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "stack_proofs_test",
    deps = [":stack_proofs"],
)

# Codec (parser/encoder) proofs
rocq_library(
    name = "codec_proofs",
    srcs = glob(["codec/*.v"]),
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "codec_proofs_test",
    deps = [":codec_proofs"],
)

# ISLE term conversion proofs
rocq_library(
    name = "isle_proofs",
    srcs = glob(["isle/*.v"]),
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "isle_proofs_test",
    deps = [":isle_proofs"],
)

# All proofs combined
rocq_library(
    name = "all_proofs",
    deps = [
        ":stack_proofs",
        ":codec_proofs",
        ":isle_proofs",
    ],
    visibility = ["//visibility:public"],
)
