load("@rules_rocq_rust//rocq:defs.bzl", "rocq_library", "rocq_proof_test")

# =============================================================================
# Core Semantic Model
# =============================================================================

# WebAssembly semantics — base layer, no intra-proof dependencies.
#
# The whole inter-dependent proof group (semantics + simplify +
# correctness) shares the logical prefix `LoomProofs` via include_path,
# and the .v files import each other as `From LoomProofs Require Import
# <Module>`. This is the idiom the pulseengine/meld proofs use
# (proofs/spec/BUILD.bazel: include_path = "MeldSpec" on every library,
# `From MeldSpec Require Import ...`). It is required because the
# rules_rocq_rust rocq_library rule (@e4660cc1b) maps a library's .vo
# under `-Q <output_dir> <include_path>`; a shared explicit include_path
# gives every library a STABLE logical prefix independent of Bazel's
# per-target output-dir layout, so a dependent's `From LoomProofs
# Require Import WasmSemantics` resolves against the dep's .vo wired in
# through `deps`. The package-derived default prefix did not, because
# the .v files live in subdirectories of the BUILD package.
rocq_library(
    name = "wasm_semantics",
    srcs = ["semantics/WasmSemantics.v"],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

# Term (ISLE) semantics — depends on WasmSemantics. One library per .v
# file; the cross-file dependency is wired through `deps` (which makes
# the dep's .vo a coqc input and adds its -Q loadpath).
rocq_library(
    name = "term_semantics",
    srcs = ["semantics/TermSemantics.v"],
    deps = [":wasm_semantics"],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "wasm_semantics_test",
    deps = [":wasm_semantics"],
)

rocq_proof_test(
    name = "term_semantics_test",
    deps = [":term_semantics"],
)

# =============================================================================
# Optimization Proofs
# =============================================================================

# Constant folding proofs
rocq_library(
    name = "constant_folding",
    srcs = ["simplify/ConstantFolding.v"],
    deps = [
        ":wasm_semantics",
        ":term_semantics",
    ],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "constant_folding_test",
    deps = [":constant_folding"],
)

# Algebraic identity proofs
rocq_library(
    name = "identity",
    srcs = ["simplify/Identity.v"],
    deps = [
        ":wasm_semantics",
        ":term_semantics",
    ],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "identity_test",
    deps = [":identity"],
)

# Bitwise optimization proofs
rocq_library(
    name = "bitwise",
    srcs = ["simplify/Bitwise.v"],
    deps = [
        ":wasm_semantics",
        ":term_semantics",
    ],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "bitwise_test",
    deps = [":bitwise"],
)

# Strength reduction proofs
rocq_library(
    name = "strength_reduction",
    srcs = ["simplify/StrengthReduction.v"],
    deps = [
        ":wasm_semantics",
        ":term_semantics",
    ],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "strength_reduction_test",
    deps = [":strength_reduction"],
)

# Fused/meld optimization proofs
# Covers the optimization passes specific to WebAssembly modules produced by
# component fusion: same-memory adapter collapse, adapter devirtualization,
# trivial call elimination, type/import dedup, dead function elimination.
rocq_library(
    name = "fused_optimization",
    srcs = ["simplify/FusedOptimization.v"],
    deps = [
        ":wasm_semantics",
        ":term_semantics",
    ],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "fused_optimization_test",
    deps = [":fused_optimization"],
)

# =============================================================================
# Master Correctness Theorem
# =============================================================================

rocq_library(
    name = "correctness",
    srcs = ["Correctness.v"],
    deps = [
        ":wasm_semantics",
        ":term_semantics",
        ":constant_folding",
        ":identity",
        ":bitwise",
        ":strength_reduction",
    ],
    include_path = "LoomProofs",
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "correctness_test",
    deps = [":correctness"],
)

# =============================================================================
# Existing Proof Libraries
# =============================================================================

# Stack signature proofs
rocq_library(
    name = "stack_proofs",
    srcs = glob(["stack/*.v"]),
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "stack_proofs_test",
    deps = [":stack_proofs"],
)

# Codec (parser/encoder) proofs
rocq_library(
    name = "codec_proofs",
    srcs = glob(["codec/*.v"]),
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "codec_proofs_test",
    deps = [":codec_proofs"],
)

# ISLE term conversion proofs
rocq_library(
    name = "isle_proofs",
    srcs = glob(["isle/*.v"]),
    visibility = ["//visibility:public"],
)

rocq_proof_test(
    name = "isle_proofs_test",
    deps = [":isle_proofs"],
)

# =============================================================================
# Aggregated Targets
# =============================================================================

# All simplification/optimization proofs
filegroup(
    name = "simplify_proofs",
    srcs = [
        ":constant_folding",
        ":identity",
        ":bitwise",
        ":strength_reduction",
        ":fused_optimization",
    ],
    visibility = ["//visibility:public"],
)

# All semantic model proofs
filegroup(
    name = "semantics_proofs",
    srcs = [
        ":wasm_semantics",
        ":term_semantics",
    ],
    visibility = ["//visibility:public"],
)

# All proofs combined (filegroup for aggregation)
filegroup(
    name = "all_proofs",
    srcs = [
        # New semantic and optimization proofs
        ":wasm_semantics",
        ":term_semantics",
        ":constant_folding",
        ":identity",
        ":bitwise",
        ":strength_reduction",
        ":fused_optimization",
        ":correctness",
        # Existing proofs
        ":stack_proofs",
        ":codec_proofs",
        ":isle_proofs",
        "//proofs/rust_verified:value_types",
        "//proofs/rust_verified:value_types_proofs",
        "//proofs/rust_verified:value_types_translated_proofs",
        "//proofs/rust_verified:stack_signature",
        "//proofs/rust_verified:stack_signature_proofs",
        "//proofs/rust_verified:isle_conversion",
        "//proofs/rust_verified:isle_conversion_proofs",
    ],
    visibility = ["//visibility:public"],
)

# Test target for all proofs
test_suite(
    name = "all_proofs_test",
    tests = [
        ":wasm_semantics_test",
        ":term_semantics_test",
        ":constant_folding_test",
        ":identity_test",
        ":bitwise_test",
        ":strength_reduction_test",
        ":fused_optimization_test",
        ":correctness_test",
        ":stack_proofs_test",
        ":codec_proofs_test",
        ":isle_proofs_test",
    ],
)
